instance1/temp-retrieve/objects/Commsion__c/Commsion__c.object-meta.xml
<CustomObject>
    <label>Commission</label>
    <nameField>
        <displayFormat>COM{000000000}</displayFormat>
        <label>Commsion ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commissions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>