instance1/temp-retrieve/objects/Commsion__c/fields/Approved_Commission__c.field-meta.xml
<CustomField>
    <fullName>Approved_Commission__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Commission</label>
    <type>Checkbox</type>
</CustomField>