instance1/temp-retrieve/objects/Commsion__c/fields/Commission_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Commission_Approved_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>