instance1/temp-retrieve/objects/Commsion__c/fields/Commission_Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Commission_Payable_To__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Commission Payable To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>