instance1/temp-retrieve/objects/Commsion__c/fields/Membership_Shipped_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Shipped_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Membership Shipped Date</label>
    <type>Date</type>
</CustomField>