instance1/temp-retrieve/objects/Commsion__c/fields/Opportunity_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Refunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Refunded</label>
    <type>Checkbox</type>
</CustomField>