instance1/temp-retrieve/objects/Commsion__c/fields/Opportunity_Refunded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Refunded_Amount__c</fullName>
    <label>Opportunity Refunded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>