instance1/temp-retrieve/objects/Commsion__c/fields/Opportunity_Refunded_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Refunded_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Refunded Date</label>
    <type>Date</type>
</CustomField>