instance1/temp-retrieve/objects/Commsion__c/fields/Owner_Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Owner_Commission_Rate__c</fullName>
    <label>Commission %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>