instance1/temp-retrieve/objects/Commsion__c/fields/Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Payable_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commissions</relationshipLabel>
    <relationshipName>Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>