instance1/temp-retrieve/objects/Commsion__c/fields/Shipped_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Shipped_Date_Custom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipped Date Custom</label>
    <type>Date</type>
</CustomField>