instance1/temp-retrieve/objects/Commsion__c/fields/Split_Commission_Note__c.field-meta.xml
<CustomField>
    <fullName>Split_Commission_Note__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Split Commission Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>