instance1/temp-retrieve/objects/Commsion__c/fields/Split_Total_Commissionable_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Split_Total_Commissionable_Percentage__c</fullName>
    <label>Split Total Commissionable Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>