instance1/temp-retrieve/objects/Commsion__c/fields/Total_Commissionable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Commissionable_Amount__c</fullName>
    <formula>Opportunity_Total_Amount__c  *  Total_Commissionable_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commissionable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>