instance1/temp-retrieve/objects/Commsion__c/fields/Transaction_Approved_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Approved_Date_1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Approved Date</label>
    <type>Date</type>
</CustomField>