instance1/temp-retrieve/objects/Commsion__c/fields/TRIG_RECAL__c.field-meta.xml
<CustomField>
    <fullName>TRIG_RECAL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TRIG_RECAL</label>
    <type>Checkbox</type>
</CustomField>