instance1/temp-retrieve/objects/Commsion__c/validationRules/Split_Commission_Owner_100.validationRule-meta.xml
<ValidationRule>
    <fullName>Split_Commission_Owner_100</fullName>
    <active>false</active>
    <errorConditionFormula>Split_Commission__c == TRUE 
&amp;&amp;
Total_Commissionable_Percentage__c == 1</errorConditionFormula>
    <errorDisplayField>Total_Commissionable_Percentage__c</errorDisplayField>
    <errorMessage>Please Choose The Percentage Amount For Opp Owner</errorMessage>
</ValidationRule>