instance1/temp-retrieve/objects/Commsion__c/validationRules/Split_Commission_Split_Commission_Payabl.validationRule-meta.xml
<ValidationRule>
    <fullName>Split_Commission_Split_Commission_Payabl</fullName>
    <active>true</active>
    <errorConditionFormula>Split_Commission__c == TRUE 
&amp;&amp;
Split_Commission_Payable_To__c == NULL</errorConditionFormula>
    <errorDisplayField>Split_Commission_Payable_To__c</errorDisplayField>
    <errorMessage>If Split Commission Is Select,This Field Can Not Be Empty</errorMessage>
</ValidationRule>