instance1/temp-retrieve/objects/Commsion__c/listViews/Commissions_To_Be_Paid.listView-meta.xml
<ListView>
    <fullName>Commissions_To_Be_Paid</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Commission_Payable_To__c</columns>
    <columns>Owner_Commission_Rate__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Approved_Commission__c</columns>
    <columns>Shipped_Date_Custom__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Total_Commissionable_Amount__c</columns>
    <columns>Owner_Commission_Amount__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Opportunity_Refunded__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved_Commission__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Shipped_Date_Custom__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Membership_Shipped_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Commissions To Be Paid</label>
    <sharedTo>
        <group>Executive_Group</group>
        <group>Finance_Group</group>
        <roleAndSubordinates>CFO_New</roleAndSubordinates>
    </sharedTo>
</ListView>