instance1/temp-retrieve/objects/Commsion__c/listViews/Copy_of_Commissions_To_Be_Paid.listView-meta.xml
<ListView>
    <fullName>Copy_of_Commissions_To_Be_Paid</fullName>
    <columns>NAME</columns>
    <columns>Commission_Payable_To__c</columns>
    <columns>Owner_Commission_Rate__c</columns>
    <columns>Business_Type__c</columns>
    <columns>Approved_Commission__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Total_Commissionable_Amount__c</columns>
    <columns>Owner_Commission_Amount__c</columns>
    <columns>Opportunity_Stage__c</columns>
    <columns>Opportunity_Status__c</columns>
    <columns>Opportunity_Record_Type_Name__c</columns>
    <columns>Transaction_Approved_Date_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approved_Commission__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Shipped_Date_Custom__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Transaction_Approved_Date_1__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Opportunity_Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Genetic Testing</value>
    </filters>
    <label>Commissions To Be Paid - No Shipped Date</label>
</ListView>