instance1/temp-retrieve/objects/Commsion__c/listViews/My_Commissions.listView-meta.xml
<ListView>
    <fullName>My_Commissions</fullName>
    <columns>NAME</columns>
    <columns>Approved_Commission__c</columns>
    <columns>Commission_Payable_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Account_Name__c</columns>
    <columns>Total_Commissionable_Amount__c</columns>
    <columns>Owner_Commission_Amount__c</columns>
    <columns>Opportunity_Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Commissions</label>
</ListView>